test GetUserAuthorizer
